# word_puzzle_solver

./: .gitignore  CMakeLists.txt
res/: z_words.txt
src/trie/: tree.h  trie_node.h
src/utilities/: dictionary_cleanup.cpp  permuatation.cpp
src/word_hunt_solver/: dict_tree.h  main.cpp  path_tree.h  tree.h  trie_node.cpp  trie_node.h  word_hunt_solver.cpp  word_hunt_solver.h
